2001-01-22  John Harper  <jsh@eazel.com>

	* sawfish/wm/ext/auto-raise.jl (rw-on-focus, rw-out-focus):
	reverted the test for (eq mode 'normal). (See 2000-11-02 entry
	for reason.) This causes worse problems than it solves (e.g.
	switch desktops, M-TAB to a new window, but the old window gets
	raised)

2001-01-20  John Harper  <jsh@eazel.com>

	* version 0.36

2001-01-19  John Harper  <jsh@eazel.com>

	* sawfish/wm/user.jl (fallback-frame-style): changed this to
	`Crux' theme

	* sawfish/wm/frames.jl (frame-part-classes): added shade-button
	frame part class
	* sawfish/wm/keymaps.jl (shade-button-keymap): new keymap

	* sawfish/wm/util/recolor-image.jl (make-image-recolorer): new
	module, exports this function. A factory for creating functions
	that recolour images based on a white -> <color> -> black
	gradient. Abstracted this code out of the new `Crux' theme

	* sawfish/wm/gaol.jl (fully-safe-features): added
	sawfish.wm.util.recolor-image

2001-01-18  John Harper  <jsh@eazel.com>

	* sawfish/wm/ext/hide-dialogs.jl: new module, hide dialog
	windows in groups that don't have the focus. Currently there's
	no way to enable this except by loading it by hand..

2001-01-15  John Harper  <jsh@eazel.com>

	* sawfish/wm/util/gtkrc.jl (gtkrc-handle-client-msg): removed
	leftover debugging output

2001-01-08  John Harper  <jsh@eazel.com>

	* sawfish/wm/util/gtkrc.jl (reload-gaol): new function, sets
	all the variables that are loaded into the gaol (since they
	don't update themselves automatically, doh!). Fixes bug 5505

	* sawfish/wm/commands/groups.jl (delete-group): added special
	case so that desktop windows don't get deleted

2001-01-07  John Harper  <jsh@eazel.com>

	* sawfish/wm/ext/audio-events.jl (audio-events-alist): change
	"" doc string to nil (patch from Christian Marillat
	<marillat.christian@wanadoo.fr>)

2001-01-06  John Harper  <jsh@eazel.com>

	* sawfish/wm/commands/groups.jl (delete-group): new command

	* sawfish/wm/keymaps.jl (close-button-keymap): bind